--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# This workflow builds, tests, and deploys the application to Firebase
+# Only deployable code will be merged to main
 
-name: Node.js CI
+name: Build, Test and Deploy
 
 on:
   push:
@@ -10,23 +10,43 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-test-deploy:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [18.x]
+        # Using one stable Node.js version for consistency
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run dev
-    - run: npm run build --if-present
-    - run: npm test
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Build application
+      run: npm run build
+      
+    - name: Run tests
+      run: npm test
+      
+    - name: Install Firebase CLI
+      run: npm install -g firebase-tools
+      
+    # On pull requests, verify the build can be deployed but don't actually deploy
+    - name: Firebase Deploy Dry Run (PR only)
+      if: github.event_name == 'pull_request'
+      run: firebase deploy --dry-run --token "${{ secrets.FIREBASE_TOKEN }}"
+      
+    # Only deploy when pushing to main branch, not on PRs
+    - name: Deploy to Firebase
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      run: firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}"
+      env:
+        CI: true
