--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.11.3",
     "react": "^19.1.0",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
