--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.11.3",
+    "js-priority-queue": "^0.1.5",
     "react": "^19.1.0",
     "react-d3-tree": "^3.6.6",
     "react-dom": "^19.1.0",
