--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-scroll": "^1.9.3",
     "react-syntax-highlighter": "^15.6.1",
     "refractor": "^5.0.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "react-toastify": "^9.1.0",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
