--- a/package.json
+++ b/package.json
@@ -28,7 +28,15 @@
     "refractor": "^5.0.0",
     "styled-components": "^6.1.18",
     "react-toastify": "^9.1.0",
-    "zustand": "^4.0.0"
+    "zustand": "^4.0.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "react-lottie-player": "^1.4.0",
+    "react-particles-js": "^3.0.2",
+    "particles-bg": "^2.0.1",
+    "react-helmet-async": "^1.3.0",
+    "react-router": "^6.16.0"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
