--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.3",
+    "react-slick": "0.30.3",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^9.1.0",
-    "react-slick":"0.30.3",
-    "slick-carousel": "^1.8.1",
+    "react-tsparticles": "^2.12.2",
     "refractor": "^5.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.18",
     "tsparticles": "^3.8.1",
-    "zustand": "^4.0.0",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles-engine" : "^2.12.0"
+    "tsparticles-engine": "^2.12.0",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
