--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
+.github
 
 #Ignore vscode AI rules
 .github/copilot-instructions.md
+
+algorithm-visualizer-master
+algorithms
+tracers.js
+
+.gitignore
