--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.3",
+    "@dagrejs/dagre": "^1.1.5",
     "@monaco-editor/react": "^4.7.0",
     "@popperjs/core": "^2.11.8",
     "@uiw/codemirror-theme-dracula": "^4.24.0",
     "@uiw/react-codemirror": "^4.24.0",
+    "@xyflow/react": "^12.8.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.11.3",
@@ -22,6 +24,7 @@
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-flow": "^1.0.3",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax": "^3.5.2",
@@ -31,6 +34,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^9.1.0",
     "react-tsparticles": "^2.12.2",
+    "react-xarrows": "^2.0.2",
     "refractor": "^5.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.18",
