--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.11.3",
     "js-priority-queue": "^0.1.5",
+    "js2flowchart": "^1.3.5",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
