klee algorithm added

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "framer-motion": "^12.11.3",
     "js-priority-queue": "^0.1.5",
     "js2flowchart": "^1.3.5",
+    "konva": "^9.3.22",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-flow": "^1.0.3",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-konva": "^19.0.7",
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.3",
